<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/nav_chat"
        android:icon="@android:drawable/ic_btn_speak_now"
        android:title="@string/nav_chat" />

    <item
        android:id="@+id/nav_forecast"
        android:icon="@android:drawable/ic_menu_month"
        android:title="@string/nav_forecast" />

    <item
        android:id="@+id/nav_alerts"
        android:icon="@android:drawable/ic_dialog_alert"
        android:title="@string/nav_alerts" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/nav_profile" />
</menu>
